--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "gatsby-starter-ts",
-  "description": "A TypeScript starter for Gatsby that includes all you need to build amazing projects",
+  "name": "healthdash",
   "version": "1.0.0",
   "private": true,
-  "author": "João Pedro Schmitz <hey@joaopedro.dev> (https://joaopedro.dev)",
-  "license": "MIT",
-  "keywords": [
-    "gatsby",
-    "starter",
-    "typescript"
-  ],
   "scripts": {
     "start": "gatsby develop",
     "build": "gatsby build",
@@ -27,7 +19,13 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "formik": "2.2.6",
+    "framer-motion": "^4",
     "gatsby": "3.6.1",
+    "just-debounce-it": "^1.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tsconfig-paths-webpack-plugin": "3.5.1"
