--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^4",
     "gatsby": "3.6.1",
     "just-debounce-it": "^1.5.0",
+    "nosleep.js": "^0.12.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tsconfig-paths-webpack-plugin": "3.5.1"
